--- a/views/crearPelicula.ejs
+++ b/views/crearPelicula.ejs
@@ -6,7 +6,7 @@
   <body>
 
     <h1>Crear Pelicula</h1>
-    <form method="POST" action="/movies/test" enctype="multipart/form-data">
+    <form method="POST" action="/movies/add">
         <label for="">Title</label>
         <input type="text" name="title">
         <br>
